--- a/config.json
+++ b/config.json
@@ -3,7 +3,7 @@
     {
       "name": "The best repo",
       "value": "rognstadragnar/module-starter",
-      "isDefault": true
+      "isDefault": false
     },
     {
       "name": "Not the best repo",
