--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
     "cpy": "^6.0.0",
     "degit": "^2.0.2",
     "del": "^3.0.0",
+    "eslint": "^4.18.2",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.7.0",
     "execa": "^0.9.0",
     "gittar": "^0.1.0",
     "graceful-copy": "^1.1.0",
