--- a/package.json
+++ b/package.json
@@ -17,9 +17,7 @@
     "type": "git",
     "url": "https://github.com/rognstadragnar/insj.git"
   },
-  "keywords": [
-    "Project scaffolding"
-  ],
+  "keywords": ["Project scaffolding"],
   "author": "Ragnar Rognstad (http://rognstad.me)",
   "license": "MIT",
   "devDependencies": {
@@ -33,7 +31,6 @@
     "chalk": "^2.3.2",
     "commander": "^2.14.1",
     "del": "^3.0.0",
-    "execa": "^0.9.0",
     "gittar": "^0.1.0",
     "graceful-copy": "^1.1.0",
     "inquirer": "^5.1.0",
